--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section id="pillars" class="py-16">
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-[#003F5C]">What Are The Three Pillars of ESG?</h2>
-                <p class="text-gray-600 mt-4 max-w-2xl mx-auto">ESG investing evaluates companies on more than just their bottom line. It's a holistic approach that uses three key pillars to measure a company's sustainability and ethical impact.</p>
+                <p class="text-gray-600 mt-4 max-w-2xl mx-auto">ESG investing evaluates companies on more than just their bottom line.<br>It's a holistic approach that uses three key pillars to measure a company's sustainability and ethical impact.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                 <div class="bg-white p-8 rounded-lg shadow-lg border-t-4 border-[#2F4B7C]">
@@ -309,3 +309,4 @@
 
 </body>
 </html>
+
