--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Section 1: The Three Pillars -->
         <section id="pillars" class="py-16">
             <div class="text-center mb-12">
-                <h2 class="text-3xl md:text-4xl font-bold text-[#003F5C]">What Are The Three Pillars of ESG?</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-[#003F5C]">What are the Three Pillars of ESG?</h2>
                 <p class="text-gray-600 mt-4 max-w-2xl mx-auto">ESG investing evaluates companies on more than just their bottom line.<br>It uses three key pillars to evaluate companies based on their environmental, social, and governance practices.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
@@ -309,6 +309,7 @@
 
 </body>
 </html>
+
 
 
 
